# pass-operator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .test  .test.pub  .tool-versions  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.develop  Dockerfile.e2e  LICENSE  PassSecret.json  README.md  cmd.sh  junit_test_results.xml  package.json  pyproject.toml  renovate.json  requirements.txt  test  test.py  test.xml  tmp
.circleci/: base_python.yml  config.yml  helm.operator-crds.yml  helm.yml  scripts.yml  src.ignore  src.test.ignore  src.test.yml  src.yml  tests.ignore  tests.yml
.github/: .hadolint.yaml  settings.yml
base_python/alternate/: importable.py
base_python/base_python/: test.py
docs/setup/: gpg.md
helm/: README.md
helm/operator/: Chart.yaml  README.md  values.schema.json  values.yaml
helm/operator-crds/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
helm/operator-crds/_json/: PassSecret.json
helm/operator-crds/templates/: PassSecret.yaml
helm/operator-e2e/: Chart.yaml  README.md  values.schema.json  values.yaml
helm/operator-e2e/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  gpg-secret.yaml  hpa.yaml  ingress.yaml  initialize-repo-job.yaml  service.yaml  serviceaccount.yaml  ssh-secret.yaml
helm/operator-e2e/templates/tests/: test-connection.yaml
helm/operator/api/: healthcheck.py
helm/operator/crds/: PassSecret.yaml
helm/operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  gpg-secret.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  ssh-secret.yaml
helm/operator/templates/tests/: test-connection.yaml
scripts/: dependencies.sh  develop.sh  minikube.sh  psthread.sh  pstree.sh  pylint.sh
scripts/docker/: build-mysql.sh  build.sh  run.sh
src/: test_hook.py
src/data/: secret.yaml
src/healthcheck/: app.py  healthcheck.py
src/operator/: __init__.py  cli.py  daemon.py  environment.py  git.py  gpg.py  kubernetes.py  operator.py  secret.py  utils.py
src/pass/: git.py
src/passoperator/: __init__.py  cli.py  daemon.py  git.py  gpg.py  locks.py  operator.py  pass.py  secret.py  utils.py
src/test/: Dockerfile.e2e  command.e2e.sh  common.py
src/test/e2e/: lib.py  test_crd.py
src/test/unit/: test_passsecret_inverse.py
tests/: Dockerfile.e2e  command.e2e.sh  common.py  test.py  utils.py
tests/crd/: singular_data.yaml
tests/data/crd/: test_multiple_data.yaml  test_singular_data.yaml  test_singular_data_collision_1.yaml  test_singular_data_collision_2.yaml  test_singular_data_different_managed_secret_name.yaml  test_singular_data_immutable.yaml  test_zero_data.yaml
tests/e2e/: Dockerfile.e2e  command.e2e.sh  lib.py  test_crd.py
tests/e2e/crd/: test_multiple_data_paths.py
tests/e2e/crd/data/: test_singular_data.yaml  test_singular_data_collision_2.yaml
tests/unit/: test_passsecret.py  test_passsecret_transforms.py
tests/unit/crd/: test_multiple_data.yaml  test_singular_data.yaml  test_singular_data_2.yaml  test_singular_data_different_managed_secret_name.yaml
